[gd_scene load_steps=15 format=3 uid="uid://neypc8w5fxfm"]

[ext_resource type="Script" path="res://Scripts/Enemies/enemycontroller.gd" id="1_72pts"]
[ext_resource type="PackedScene" uid="uid://cdmj75rhyi5d4" path="res://Particles/blood_splatter.tscn" id="2_4s0a6"]
[ext_resource type="PackedScene" uid="uid://cwapfrsvxg170" path="res://Rewards/coin.tscn" id="3_8hwa0"]
[ext_resource type="Texture2D" uid="uid://cf5l5o3xsqn4h" path="res://Sprites/Characters/gunner.png" id="4_ouakx"]
[ext_resource type="AudioStream" uid="uid://nololw0xwixg" path="res://Sounds/damage.wav" id="5_hpjvm"]
[ext_resource type="Script" path="res://Scripts/Enemies/gun.gd" id="6_ow8c3"]
[ext_resource type="PackedScene" uid="uid://bnoougge50drk" path="res://Projectiles/bullet.tscn" id="7_cxb3r"]
[ext_resource type="Texture2D" uid="uid://di0bnp4vrqscf" path="res://Sprites/Guns/rifle.png" id="8_hwanb"]
[ext_resource type="AudioStream" uid="uid://x1pcq0tjt1rd" path="res://Sounds/gunshot.wav" id="9_83mm3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_74bm3"]
size = Vector2(9, 20)

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_wde0d"]
points = PackedVector2Array(0, 0, 32, 64, -32, 64)

[sub_resource type="Animation" id="Animation_8y0l7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("gun/Gun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, -8.9407e-07)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("gun/Gun:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_wt3ma"]
resource_name = "shot"
length = 0.05
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("gun/Gun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(12, -8.9407e-07), Vector2(12, -1), Vector2(12, -8.9407e-07)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("gun/Gun:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0610865, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("gun/shot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x77wt"]
_data = {
"RESET": SubResource("Animation_8y0l7"),
"shot": SubResource("Animation_wt3ma")
}

[node name="rifle" type="CharacterBody2D" groups=["Enemy"]]
position = Vector2(364, 79)
script = ExtResource("1_72pts")
life = 200
idling_distance = 500
SPEED = 65
LOOKINGSPEED = 50
WALKINGSPEED = 20
looking_distance = 300
goldDropped = 100
bloodSplatter = ExtResource("2_4s0a6")
goldCoin = ExtResource("3_8hwa0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_74bm3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_ouakx")

[node name="CheckPlayer" type="ShapeCast2D" parent="."]
rotation = -1.5708
shape = SubResource("ConvexPolygonShape2D_wde0d")
target_position = Vector2(0, 0)

[node name="damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_hpjvm")

[node name="gun" type="Node2D" parent="."]
script = ExtResource("6_ow8c3")
min_cooldown = 0.2
first_shot_cooldown = 0.5
bullet = ExtResource("7_cxb3r")

[node name="Gun" type="Sprite2D" parent="gun"]
position = Vector2(12, -8.9407e-07)
texture = ExtResource("8_hwanb")

[node name="RayCast2D" type="RayCast2D" parent="gun"]
target_position = Vector2(100, 0)

[node name="gun_cooldown" type="Timer" parent="gun"]

[node name="gunAnimation" type="AnimationPlayer" parent="gun"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_x77wt")
}

[node name="shot" type="AudioStreamPlayer2D" parent="gun"]
stream = ExtResource("9_83mm3")
volume_db = -15.995

[connection signal="timeout" from="gun/gun_cooldown" to="gun" method="_on_gun_cooldown_timeout"]
